# AdventOfCode2025

./: .gitignore  AdventOfCode2025.sln  Taskfile.yml
data/: day06.txt  day09.txt
src/AOC/: AOC.fsproj  Benchmark.fs  Program.fs  Utils.fs
src/AOC.Tests/: AOC.Tests.fsproj  Program.fs  Tests.fs
src/AOC/Days/: Day01.fs  Day02.fs  Day03.fs  Day04.fs  Day05.fs  Day06.fs  Day07.fs  Day08.fs  Day09.fs  Day10.fs  Day11.fs  Day12.fs
src/CSharpLib/: CSharpLib.cs  NativeMethod.cs
src/NativeLib/: CMakeLists.txt  fort_lib.f90  highs_cpp.cpp
